--- a/app/globals.css
+++ b/app/globals.css
@@ -17,3 +17,5 @@ h1, h2, h3, h4, h5, h6 {
 p, span {
   font-family: 'Montserrat', sans-serif;
 }
+
+/* url('https://images.unsplash.com/photo-1548550023-2bdb3c5beed7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2139&q=80 */
