--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,10 @@
   box-sizing: border-box;
 }
 
+body {
+  background-color: #191919;
+}
+
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Fraunces', serif;
 }
